objects/Investigtion__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disposition_Indicator__c</fullName>
        <formula>IF(ISPICKVAL( Disposition__c , &quot;Substantiated&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/paomedia/small-n-flat/32/sign-check-icon.png&quot;, &quot;Substantiated&quot;), 

IF(ISPICKVAL(Disposition__c , &quot;Unsubstantiated&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-8/24/Thumb-down-icon.png&quot;, &quot;Unsubstantiated&quot;), 

IF(ISPICKVAL(Disposition__c , &quot;Unfounded&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/32/Actions-trash-empty-icon.png&quot;, &quot;Unfounded&quot;), 

IF(ISPICKVAL(Disposition__c, &quot;Null&quot;), null,null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disposition Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Substantiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubstantiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfounded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral</label>
        <referenceTo>Referral__c</referenceTo>
        <relationshipLabel>Investigtion</relationshipLabel>
        <relationshipName>Investigtion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IF(ISPICKVAL( Status__c , &quot;Open&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-11/32/shop-open-icon.png&quot;, &quot;Open&quot;), 

IF(ISPICKVAL(Status__c , &quot;Pending&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/custom-icon-design/flatastic-8/32/Open-folder-info-icon.png&quot;, &quot;Pending&quot;), 

IF(ISPICKVAL(Status__c , &quot;Under Review&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/custom-icon-design/flatastic-8/32/Open-folder-search-icon.png&quot;, &quot;Assessment&quot;), 


IF(ISPICKVAL(Status__c , &quot;Closed&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-11/32/shop-closed-icon.png&quot;, &quot;Closed&quot;), 

IF(ISPICKVAL(Status__c, &quot;Null&quot;), null,null)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Investigtion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Referral__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Indicator__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Investigtion Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigtions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>